--- a/DecisionNav/appsettings.json
+++ b/DecisionNav/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-DecisionNav-14A7A098-37BB-489F-84C1-97A87213C4E8;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=AVOLT10L\\AVOLT10L;Database=Navigation BBT2;User Id=test;password=test;Trusted_Connection=False;MultipleActiveResultSets=true;"
+
+    "DefaultConnection": "Server=AVOLT10L\\AVOLT10L;Database=Navigation BBT2;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
