--- a/DecisionNav/appsettings.json
+++ b/DecisionNav/appsettings.json
@@ -2,7 +2,8 @@
   "ConnectionStrings": {
     //"DefaultConnection": "Server=AVOLT10L\\AVOLT10L;Database=Navigation BBT2;User Id=test;password=test;Trusted_Connection=False;MultipleActiveResultSets=true;"
 
-    "DefaultConnection": "Server=DESKTOP-UKJJB1E\\WINSQL;Database=Navigation BBT;Trusted_Connection=True;MultipleActiveResultSets=true;",
+    //"DefaultConnection": "Server=DESKTOP-UKJJB1E\\WINSQL;Database=Navigation BBT;Trusted_Connection=True;MultipleActiveResultSets=true;",
+    "DefaultConnection": "Server=AVOLT10L\\AVOLT10L;Database=Navigation BBT2;Trusted_Connection=True;MultipleActiveResultSets=true;",
     "BankVarsConnection": "Server=AVOLT10L\\AVOLT10L;Database=BankVars_PROD;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "Logging": {
